# momaland

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CITATION.bib  CNAME  README.md  index.html  main.py  momaland_demo.ipynb  objects.inv  pistonball_test.py  pyproject.toml  searchindex.js  setup.py  utils.py  wrapper_testing.py
.github/workflows/: build-docs-dev.yml  build-docs-version.yml  build-publish.yml  manual-build-docs-version.yml  test.yml
0.1.0/: .buildinfo  searchindex.js
0.1.0/_modules/: index.html
0.1.0/_static/: documentation_options.js
0.1.0/api/aec/: index.html
0.1.0/environments/all-envs/: index.html
0.1.0/environments/mobeach/: index.html
0.1.0/environments/mocongestion/: index.html
0.1.0/environments/mogem_mining/: index.html
0.1.0/environments/moingenious/: index.html
0.1.0/environments/moitem_gathering/: index.html
0.1.0/release_notes/: index.html
0.1.0/tutorials/custom_env/: index.html
0.1.0/tutorials/learning_algorithms/: index.html
0.1.1/: .buildinfo  404.html  objects.inv
0.1.1/_modules/: index.html
0.1.1/api/aec/: index.html
0.1.1/environments/mobeach/: index.html
0.1.1/environments/mobreakthrough/: index.html
0.1.1/environments/moconnect4/: index.html
0.1.1/environments/mogem_mining/: index.html
0.1.1/environments/momultiwalker_stability/: index.html
0.1.1/environments/mopistonball/: index.html
0.1.1/environments/moroute_choice/: index.html
0.1.1/environments/mosame_game/: index.html
0.1.1/search/: index.html
0.1.1/tutorials/custom_env/: index.html
0.1.1/tutorials/learning_algorithms/: index.html
README/: index.html
_modules/: index.html
_static/: documentation_options.js
api/aec/: index.html
api/parallel/: index.html
api/wrappers/: index.html
docs/: README.md  conf.py  index.md  release_notes.md  requirements.txt
docs/_scripts/: gen_env_docs.py
docs/api/: aec.md  parallel.md  wrappers.md
docs/code_examples/: usage_aec.py  usage_parallel.py
docs/environments/: all-envs.md  catch.md  escort.md  mobeach.md  mobeach_domain.md  mobreakthrough.md  mocongestion.md  mocongestion_game.md  moconnect4.md  mogem_mining.md  mogemmining.md  moingenious.md  moitem_gathering.md  moitemgathering.md  momultiwalker.md  momultiwalker_stability.md  mopistonball.md  moroute_choice.md  mosame_game.md  mosamegame.md  surround.md
docs/envs/: adversarial-envs.md  all-envs.md  cooperative-envs.md
docs/envs/cooperative/: escort.md  momultiwalker.md
docs/introduction/: install.md  usage.md
docs/tutorials/: custom_env.md  learning_algorithms.md  training.md
docs/wrappers/: wrappers.md
environments/all-envs/: index.html
environments/catch/: index.html
environments/escort/: index.html
environments/mobeach/: index.html
environments/mobeach_domain/: index.html
environments/mobreakthrough/: index.html
environments/mocatch/: index.html
environments/mocongestion/: index.html
environments/mocongestion_game/: index.html
environments/moconnect4/: index.html
environments/moescort/: index.html
environments/mogem_mining/: index.html
environments/mogemmining/: index.html
environments/moingenious/: index.html
environments/moitem_gathering/: index.html
environments/moitemgathering/: index.html
environments/momultiwalker/: index.html
environments/momultiwalker_stability/: index.html
environments/mopistonball/: index.html
environments/moroute_choice/: index.html
environments/mosame_game/: index.html
environments/mosurround/: index.html
environments/surround/: index.html
envs/beach_domain/: beach_domain.py  resources.py
envs/congestion/: moBPD.py  resources.py
genindex/: index.html
introduction/api/: index.html
introduction/install/: index.html
main/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
main/environments/mobeach/: index.html
main/environments/mocatch/: index.html
main/environments/moescort/: index.html
main/environments/moitemgathering/: index.html
main/environments/momultiwalker/: index.html
main/environments/mosurround/: index.html
main/genindex/: index.html
main/introduction/api/: index.html
main/introduction/install/: index.html
main/release_notes/: index.html
main/search/: index.html
momadm_benchmarks/: __init__.py  tester_itemgathering.py  utils.py
momadm_benchmarks/envs/: __init__.py
momadm_benchmarks/envs/beach_domain/: beach_domain.py  mobeach_v0.py
momadm_benchmarks/envs/breakthrough/: breakthrough.py  breakthrough_check.py  mobreakthrough_v0.py
momadm_benchmarks/envs/congestion/: moBPD.py  resources.py
momadm_benchmarks/envs/congestion_game/: congestion_game.py  mocongestion_v0.py
momadm_benchmarks/envs/connect4/: __init__.py  connect4.py  connect4_check.py
momadm_benchmarks/envs/crazyrl/: crazyRL_base.py
momadm_benchmarks/test/: api_test.py  pistonball_test.py
momadm_benchmarks/utils/: __init__.py  all_modules.py  conversions.py  env.py  generate_gif_image.py
momaland/: __init__.py  utils.py
momaland/envs/: __init__.py
momaland/envs/beach/: beach.py  (+1 more)
momaland/learning/: __init__.py  train_GPILS.py  train_GPIPD.py  train_centralised_agent_example.py  train_mo_sa_example.py  u_functions.py  utils.py
momaland/test/: __init__.py  api_test.py  wrapper_test.py
momaland/utils/: __init__.py  aec_wrappers.py  all_modules.py  conversions.py  env.py  generate_gif_image.py  parallel_wrappers.py  wrappers.py
release_notes/: index.html
results/: MOMAPPO_Catch_0.1-0.9_1.csv  MOMAPPO_Catch_0.2-0.8_1.csv  MOMAPPO_Catch_0.3-0.7_1.csv  MOMAPPO_Catch_0.4-0.6_1.csv  MOMAPPO_Catch_0.5-0.5_1.csv  MOMAPPO_Catch_0.6-0.4_1.csv  MOMAPPO_Catch_0.7-0.3_1.csv  MOMAPPO_Catch_0.8-0.2_1.csv  MOMAPPO_Catch_0.9-0.1_1.csv
search/: index.html
tests/: all_modules.py  pickle_test.py  test_envs.py
tutorials/custom_env/: index.html
tutorials/learning_algorithms/: index.html
tutorials/training/: index.html
v0.0.1-alpha/: 404.html  index.html
v0.0.1-alpha/release_notes/: index.html
v0.0.2/: 404.html  objects.inv
v0.0.2/search/: index.html
v0.2.0/genindex/: index.html
(+179 files in other folders)
