[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "momaland"
description="A standard API for Multi-Objective Multi-Agent Decision making and a diverse set of reference environments."
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name="Florian Felten", email="ffelten@mavt.ethz.ch"},
    {name="Roxana Radulescu", email="r.t.radulescu@uu.nl"},
]
license = { text = "GNU General Public License v3.0" }
keywords = ["Reinforcement Learning", "Multi-Objective", "Multi-Agent", "RL", "AI", "gymnasium", "pettingzoo"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "gymnasium >=1.1.0",
    "pettingzoo[sisl,butterfly] >=1.24.0",
    "numpy >=1.21.0",
    "networkx >=3.1",
    "sympy >=1.12",
    "pygame >=2.3.0",
    "PyOpenGL >=3.1.6",
    "PyOpenGL-accelerate >=3.1.1",
    "pillow >=8.3.1",
    "wandb >=0.16.1",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
learning = [
    "jax >=0.6.2",
    "chex >=0.1.89",
    "distrax >= 0.1.5",
    "flax >=0.10.7",
    "optax >=0.2.5",
    "orbax-checkpoint >=0.11.19",
    "etils >=1.13.0",
    "supersuit >=3.10.0",
    "tqdm >=4.67.1",
    "pandas >=2.0.3",
    "matplotlib >=3.10.0",
    "morl_baselines[all] >=1.1.0",
    "pycddlib==2.1.6",
]
all = [
    "momaland[learning]",
]
testing = ["pytest ==7.1.3"]

[project.urls]
Homepage = "https://momaland.farama.org/"
Repository = "https://github.com/Farama-Foundation/momaland"
Documentation = "https://momaland.farama.org/"
"Bug Report" = "https://github.com/Farama-Foundation/momaland/tree/main/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["momaland", "momaland.*"]

[tool.setuptools.package-data]
momaland = [
    "**/*.json",
    "**/assets/*",
    "py.typed",
]

# Linters and Test tools #######################################################

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["momaland", "tests", "docs/scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3

[tool.pyright]
include = ["momaland/**", "tests/**"]
exclude = ["**/node_modules", "**/__pycache__"]
strict = []

typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, pygame)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"
# Some modules are missing type stubs, which is an issue when running pyright locally
reportMissingTypeStubs = false
# For warning and error, will raise an error when
reportInvalidTypeVarUse = "none"

# reportUnknownMemberType = "warning"  # -> raises warnings
# reportUnknownParameterType = "warning"  # -> raises warnings
# reportUnknownVariableType = "warning"  # -> raises warnings
# reportUnknownArgumentType = "warning"  # -> raises warnings
reportGeneralTypeIssues = "none"  # -> commented out raises 489
reportOptionalSubscript = "none"
#reportAbstractUsage = "none"
#reportArgumentType= "none"
#reportAssertTypeFailure= "none"
#reportAssignmentType= "none"
#reportAttributeAccessIssue= "none"
#reportCallIssue= "none"
#reportInconsistentOverload = "none"
#reportIndexIssue = "none"
#reportInvalidTypeArguments = "none"
#reportInvalidTypeForm = "none"
#reportNoOverloadImplementation = "none"
#reportOperatorIssue = "none"
#reportPossiblyUnboundVariable = "none"
#reportRedeclaration = "none"
#reportReturnType = "none"
#reportUnusedExcept = "none"

reportUntypedFunctionDecorator = "none"  # -> pytest.mark.parameterize issues

reportOptionalMemberAccess = "none" # -> commented out raises warnings
reportPrivateImportUsage = "warning" # -> this raises warnings because we use not exported modules from gym (wrappers)

reportPrivateUsage = "warning"
reportUnboundVariable = "warning"

[tool.pytest.ini_options]
filterwarnings = ['ignore:.*The environment .* is out of date.*']
norecursedirs = [
    "momaland",
]
# filterwarnings = ['ignore:.*step API.*:DeprecationWarning']
